did work on bubble tree. still working on sizing dependencies

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   <link rel="stylesheet" href="built-editor.css">
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="foundation.min.css">
+  <link rel="stylesheet" href="tree.css">
+  <link rel="stylesheet" href="bubble.css">
 
 </head>
 
@@ -138,14 +140,21 @@ bubbleSort(data);
     </div>
   </div>
 
+<script src="d3.js"></script>
+<!-- <script src="http://d3js.org/d3.v2.min.js?2.9.1"></script> -->
+
+<script src="d3.layout.js"></script>
 <script src="esprima.js"></script>
 <script src="esmorph.js"></script>
 <script src="built-editor.min.js"></script>
 <script src="customeditor.js"></script>
 <script src="functiontrace.js"></script>
-<script type="text/javascript" src="d3.js"></script>
-<script type="text/javascript" src="d3.layout.js"></script>
-<script type="text/javascript" src="tree.js"></script>
+<!-- <script src="d3.js"></script> -->
+
+<script src="sankey.js"></script>
+<script src="tree.js"></script>
+<script src="bubble.js"></script>
+<script src="sankey-plot.js"></script>
 
 </body>
 </html>
