bubble chart animates links to dependencies

--- a/index.html
+++ b/index.html
@@ -144,6 +144,7 @@ bubbleSort(data);
 <!-- <script src="http://d3js.org/d3.v2.min.js?2.9.1"></script> -->
 
 <script src="d3.layout.js"></script>
+<script src="utils.js"></script>
 <script src="esprima.js"></script>
 <script src="esmorph.js"></script>
 <script src="built-editor.min.js"></script>
