--- a/index.html
+++ b/index.html
@@ -140,10 +140,12 @@ bubbleSort(data);
     </div>
   </div>
 
-<script src="d3.js"></script>
+<!-- <script src="d3.js"></script> -->
+<script src="bower_components/d3/d3.min.js"></script>
 <!-- <script src="http://d3js.org/d3.v2.min.js?2.9.1"></script> -->
 
-<script src="d3.layout.js"></script>
+<!-- <script src="d3.layout.js"></script> -->
+<script src="bower_components/d3-tip/index.js"></script>
 <script src="utils.js"></script>
 <script src="esprima.js"></script>
 <script src="esmorph.js"></script>
