--- a/popup.html
+++ b/popup.html
@@ -9,36 +9,52 @@
     <title>Getting Started Extension's Popup</title>
     <style>
       body {
-        /*font-family: "Segoe UI", "Lucida Grande", Tahoma, sans-serif;
-        font-size: 100%;*/
         width: 800px;
         height:800px;
+        
       }
-      /*#status {
-        /* avoid an excessively wide status text */
-        white-space: pre;
-        text-overflow: ellipsis;
-        overflow: hidden;
-        max-width: 400px;
-      }*/
+
+      .loading {
+        width: 100%;
+        margin: 100px 0;
+        text-align:center;
+        display:none;
+      }
+
+      .loading .loading-gif {
+        height: 60px;
+        width: 60px;
+        margin:40px;
+      }
+      .loading .loading-status {
+        font-size: 20px;
+      }
+
     </style>
 
   
-  <script src="bower_components/d3/d3.min.js"></script>
-  <script src="bower_components/d3-tip/index.js"></script>
-  <script src="esprima.js"></script>
-  <script src="utils.js"></script>
-  <script src="background.js"></script>
-  <script src="esmorph.js"></script>
-  <script src="functiontrace.js"></script>
-  <script src="bubble.js"></script>
+  
 
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="bubble.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="bubble.css">
 
   </head>
   <body>
+    <div class="loading">
+      <img class="loading-gif" src="colored-loading.gif" />
+      <div class="loading-status">Loader status</div>
+    </div>
     
   </body>
+  <footer>
+    <script src="bower_components/d3/d3.min.js"></script>
+    <script src="bower_components/d3-tip/index.js"></script>
+    <script src="esprima.js"></script>
+    <script src="utils.js"></script>
+    <script src="background.js"></script>
+    <script src="esmorph.js"></script>
+    <script src="functiontrace.js"></script>
+    <script src="bubble.js"></script>
+  </footer>
 </html>
 
