visualization opening up in a new browser. Paths are still messed up and gif hangs

--- a/popup.html
+++ b/popup.html
@@ -18,7 +18,7 @@
         width: 100%;
         margin: 100px 0;
         text-align:center;
-        display:none;
+        /*display:none;*/
       }
 
       .loading .loading-gif {
@@ -51,10 +51,9 @@
     <script src="bower_components/d3-tip/index.js"></script>
     <script src="esprima.js"></script>
     <script src="utils.js"></script>
-    <script src="background.js"></script>
+    <script src="bubble.js"></script>
     <script src="esmorph.js"></script>
     <script src="functiontrace.js"></script>
-    <script src="bubble.js"></script>
   </footer>
 </html>
 
