--- a/popup.html
+++ b/popup.html
@@ -9,9 +9,7 @@
     <title>Getting Started Extension's Popup</title>
     <style>
       body {
-        width: 800px;
-        height:800px;
-        
+        min-height:800px;
       }
 
       .webpage-title {
@@ -55,11 +53,22 @@
   </head>
   <body>
   <h1 class="webpage-title"></h1>
-    <div class="loading">
-      <img class="loading-gif" src="colored-loading.gif" />
-      <div class="loading-status">Hold Up, its loading</div>
-    </div>
-    
+  <div class="loading">
+    <img class="loading-gif" src="colored-loading.gif" />
+    <div class="loading-status">Hold Up, its loading</div>
+  </div>
+
+  <pre id="editor">function foo(items) {
+      var i;
+      for (i = 0; i &lt; items.length; i++) {
+          alert("Ace Rocks " + items[i]);
+      }
+  }</pre>
+  
+
+  <script src="ace-builds/src/ace.js" type="text/javascript" charset="utf-8"></script>
+  <script src="editor_config.js" type="text/javascript"></script>
+  
   </body>
 </html>
 
