worked on labels

--- a/popup.html
+++ b/popup.html
@@ -6,7 +6,7 @@
  -->
 <html>
   <head>
-    <title>Getting Started Extension's Popup</title>
+    <title>SeeJS</title>
     <style>
       body {
         min-height:800px;
