--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@ bubbleSort(data);
   </div>
 
 <!-- <script src="d3.js"></script> -->
-<script src="bower_components/d3/d3.min.js"></script>
+<script src="bower_components/d3/d3.js"></script>
 <!-- <script src="http://d3js.org/d3.v2.min.js?2.9.1"></script> -->
 
 <!-- <script src="d3.layout.js"></script> -->
