fixed ajax error handler in content_script

--- a/test_page.html
+++ b/test_page.html
@@ -1,7 +1,7 @@
 <html>
   <head>
   <script src="bower_components/d3/d3.min.js"></script>
-  <script src="esprima.js"></script>
+  <script src="esprima-bad.js"></script>
   </head>
 
   <body>
