--- a/test_page.html
+++ b/test_page.html
@@ -1,10 +1,15 @@
 <html>
   <head>
   <script src="bower_components/d3/d3.min.js"></script>
-  <script src="esprima-bad.js"></script>
+  <script src="bower_components/d3-tip/index.js"></script>
+  <script src="esprima.js"></script>
+  <script src="esmorph.js"></script>
+  <script src="functiontrace.js"></script>
+
   </head>
 
   <body>
     <h1> Test Page for SeeJS</h1>
+    <svg class="bubble-chart"></svg>
   </body>
 </html>
