working on real time messaging from web page to background. Having trouble passing message from modified source script to background or to injected content script, due to isolated worlds

--- a/test_page.html
+++ b/test_page.html
@@ -3,6 +3,7 @@
   <script src="bower_components/d3/d3.min.js"></script>
   <script src="bower_components/d3-tip/index.js"></script>
   <script src="esprima.js"></script>
+  <script src="utils.js"></script>
   <script src="esmorph.js"></script>
   <script src="functiontrace.js"></script>
 
