--- a/popup.html
+++ b/popup.html
@@ -6,13 +6,15 @@
     <style>
       body {
         min-height:800px;
-        min-width: 1350px;
+        width: 1330px;
+        position: relative;
       }
 
       .webpage-title {
         font-size: 50px;
         font-family:arial;
-        margin:40px 60px 10px 60px;
+        margin:40px 0px 10px 60px;
+        display:inline-block;
       }
 
       .loading {
@@ -32,13 +34,23 @@
         font-size: 20px;
       }
 
-      #start-tracer {
-        position: absolute;
-        top: 60px;
-        right: 40px;
+      .nav-buttons {
+        float:right;
+        padding:70px 30px 0px 0;
+      }
+
+      #start-tracer, #stop-tracer, #expand-code {
+        float:left;
         font-size: 18px;
         cursor:pointer;
+        margin:3px;
       }
+
+      #stop-tracer {
+        /*hide*/
+        display:none;
+      }
+
 
     </style>
     
@@ -62,11 +74,17 @@
       <div class="loading-status">Hold Up, its loading</div>
     </div> -->
 
+    <div class="nav-buttons">
+      <button id="start-tracer">Trace</button>
+      <button id="stop-tracer">Stop Trace</button>
+      <button id="expand-code">Expand Code</button>
+    </div>
+
     <svg class="bubble-chart"></svg>
 
     <pre id="editor">var instructions = "Click on a function to see its source code.";</pre>
 
-    <button id="start-tracer">Trace</button>
+    
   
 
     <!-- Need to load this one after the editor div is present -->
