changed colors, size of nodes now relates to sourceCode length. Not dependencies any more

--- a/popup.html
+++ b/popup.html
@@ -75,6 +75,7 @@
     </div> -->
 
     <div class="nav-buttons">
+      <button id="add-dependencies">Add Dependencies: TODO</button>
       <button id="start-tracer">Trace</button>
       <button id="stop-tracer">Stop Trace</button>
       <button id="expand-code">Expand Code</button>
