--- a/bubble.html
+++ b/bubble.html
@@ -22,13 +22,13 @@
   </head>
 
   <body>
-    <nav class="navbar navbar-default">
+    <nav class="navbar  navbar-inverse">
       <div class="container-fluid">
         <div class="navbar-header">
           <a class="navbar-brand" href="#">SeeJS</a>
         </div>
         <div>
-          <ul class="nav navbar-nav">
+          <ul class="nav navbar-nav ">
             <li><a href="#" class="webpage-title"></a></li> <!-- Goes back to sourcePage tab -->
           </ul>
           <ul class="nav navbar-nav navbar-right">
