improved tooltip styling. Styled popup settings

--- a/bubble.html
+++ b/bubble.html
@@ -35,12 +35,15 @@
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <li>
+              <a href='#' class='show-code'><span class='glyphicon glyphicon-file'></span> CODE</a>
+            </li>
+            <li>
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
                 <span class="glyphicon glyphicon-menu-hamburger"></span> MENU
               </a>
             
               <ul class="dropdown-menu action-menu">
-                <li><a href="#" id="show-code">show code</a></li>
+                <li><a href="#" class="show-code">show code</a></li>
                 <li><a href="#" id="start-tracer">trace</a></li>
                 <li><a href="#" id="stop-tracer">stop trace</a></li>
                 <li><a href="#" id="expand-code">unminify code</a></li>
@@ -61,8 +64,8 @@
         <div class="editor-wrapper">
 
           <button type="button" class="close-editor-button active btn btn-small pull-right">Close</button>
-          <div id="editor">// Click on a function to see it's source code.</div>
-          <div id="handle" class="ui-resizable-handle ui-resizable-sw"><span class="glyphicon glyphicon-menu-down"></span></div>
+          <div id="editor">// Click a circle to see it's source code.</div>
+          <div id="handle" class="ui-resizable-handle ui-resizable-sw"><span class="glyphicon glyphicon-minus"></span></div>
         </div>
       </div>
     </div>
