--- a/test_page.html
+++ b/test_page.html
@@ -1,6 +1,10 @@
 <html>
 
-  <script src="app/js/esprima.js"></script>
+  <!--<script src="app/js/esprima.js"></script> -->
+
+  <script>
+    var a = true ? function () {} : function () {};
+  </script>
 
   <body>
     <div>Test page!!!</div>
