added select/unselect all scripts in popup. replaced getBackgroundPage in popup with message. should be more reliable

--- a/test_page.html
+++ b/test_page.html
@@ -1,6 +1,6 @@
 <html>
 
-  <!--<script src="app/js/esprima.js"></script> -->
+  <script src="app/js/dist/bundle.js"></script> 
 
   <script>
     var a = true ? function () {} : function () {};
