removed unused node module

--- a/test_page.html
+++ b/test_page.html
@@ -1,6 +1,6 @@
 <html>
 
-  <script src="app/js/dist/bundle.js"></script> 
+  <script src="node_modules/d3/d3.js"></script> 
 
   <script>
     var a = true ? function () {} : function () {};
