added vis page to gulp bundler. Editor position saved on click of circle when editor not shown. Styled inline script titles in vis.

--- a/app/popup.html
+++ b/app/popup.html
@@ -16,6 +16,6 @@
 
 
     
-    <script type="text/javascript" type="text/babel" src="js/dist/bundle.js"></script>
+    <script type="text/javascript" type="text/babel" src="js/dist/popup_bundle.js"></script>
   </body>
 </html>
