--- a/bubble.html
+++ b/bubble.html
@@ -101,7 +101,7 @@
 
     <!-- Need to load this one after the editor div is present -->
     <script src="app/js/editor_config.js" type="text/javascript"></script>
-    <script src="app/js/bubble.js"></script>
+    <script src="app/js/dist/bubble_bundle.js"></script>
   </body>
 </html>
 
