broke out visualization into browserify modules.

--- a/bubble.html
+++ b/bubble.html
@@ -44,10 +44,8 @@
             
               <ul class="dropdown-menu action-menu">
                 <li><a href="#" class="show-code">show code</a></li>
-                <li><a href="#" id="start-tracer">trace</a></li>
-                <li><a href="#" id="stop-tracer">stop trace</a></li>
                 <li><a href="#" id="expand-code">unminify code</a></li>
-                <li><a href="#" id="add-dependencies">add dependencies</a></li>
+                <li><a href="#" id="show-react-bubbles">Show React Components</a></li>
                 <li role="separator" class="divider"></li>
                 <li><a href="#">Reload</a></li>
               </ul>
