been a long time. committed all changes.

--- a/bubble.html
+++ b/bubble.html
@@ -16,6 +16,7 @@
     <script src="node_modules/jquery/dist/jquery.min.js"></script>
     <script src="node_modules/jquery-ui/jquery-ui.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="node_modules/underscore/underscore-min.js"></script>
 
     <script src="app/js/utils.js"></script>
     
@@ -46,6 +47,7 @@
                 <li><a href="#" class="show-code">show code</a></li>
                 <li><a href="#" id="expand-code">unminify code</a></li>
                 <li><a href="#" id="show-react-bubbles">Show React Components</a></li>
+                <li><a href="#" id="show-react-chord">Show React Chord diagram</a></li>
                 <li role="separator" class="divider"></li>
                 <li><a href="#">Reload</a></li>
               </ul>
